# digitaltwin

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  arm_toolchain.txt  cmake_install.cmake  digitaltwin  main.cc
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/triplets/: arm-linux.cmake
bash/: compile_xml  deploy
inc/: NodeGenerator.h  ServerGenerator.h
inc/opc/spdlog/: README.md
lib/: OpcUaNodeHandler.hh  testXML.h
lib/open62541/: open62541.h
src/: OpcUaNodeHandler.cc  ServerGenerator.cc  testXML.c
src/open62541/: open62541.c
